[package]
name = "rng_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
delegate = "0.12.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai = "0.1.1"
paste = "1.0.14"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false