[package]
name = "rng_buffer"
description = "Wrappers around RNGs to buffer their output and save system calls"
version = "0.1.0"
edition = "2021"
documentation = "https://github.com/Pr0methean/rng_buffer"
license = "MIT"
repository = "https://github.com/Pr0methean/rng_buffer"
authors = ["Chris Hennick"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
bytemuck = "1.14.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
delegate = "0.12.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai = "0.1.1"
paste = "1.0.14"
rayon = "1.8.1"
num_cpus = "1.16.0"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "os"
harness = false

[[bench]]
name = "buffer_size_2"
harness = false

[[bench]]
name = "buffer_size_4"
harness = false

[[bench]]
name = "buffer_size_8"
harness = false

[[bench]]
name = "buffer_size_16"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench.package.rng_buffer]
debug = true